--- a/css/main.css
+++ b/css/main.css
@@ -237,7 +237,84 @@ input:hover {
     left: -300px;
 }
 
+/* ESTILO DO CARD */
+
+body {
+    margin: 0;
+    background-color: #e5e5e5;
+}
+
+main {
+    width: min(1200px, 90vw);
+    margin: auto;
+}
+
+.slider {
+    width: 100%;
+    height: var(--height);
+    overflow: hidden;
+    mask-image: linear-gradient(to right,
+            transparent,
+            #000 10% 90%,
+            transparent);
+}
+
+.slider .list {
+    display: flex;
+    width: 100%;
+    min-width: calc(var(--width) * var(--quantity));
+    position: relative;
+}
+
+.slider .list .item {
+    width: var(--width);
+    height: var(--height);
+    position: absolute;
+    left: 100%;
+    animation: autoRun 10s linear infinite;
+    transition: filter 0.5s;
+    animation-delay: calc((10s / var(--quantity)) * (var(--position) - 1)) !important;
+}
+
+.slider .list .item img {
+    width: 100%;
+}
+
+@keyframes autoRun {
+    from {
+        left: 100%;
+    }
+
+    to {
+        left: calc(var(--width) * -1);
+    }
+}
+
+.slider:hover .item {
+    animation-play-state: paused !important;
+    filter: grayscale(1);
+}
+
+.slider .item:hover {
+    filter: grayscale(0);
+}
+
+.slider[reverse="true"] .item {
+    animation: reversePlay 10s linear infinite;
+}
+
+@keyframes reversePlay {
+    from {
+        left: calc(var(--width) * -1);
+    }
+
+    to {
+        left: 100%;
+    }
+}
+
 /* Estilo de Produtos */
+/* FIM */
 
 /* ESTILO DO CONTATO */
 .Contato {
@@ -293,7 +370,7 @@ form h3 {
 }
 
 .inputform span {
-    margin-right:10px;
+    margin-right: 10px;
     font-size: 1.5rem;
 }
 
@@ -327,11 +404,11 @@ footer {
 #footer-content {
     background-color: #aa7448;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(4, 1fr);
     padding: 3rem 3.5rem;
 }
 
-#footer-contacts h1{
+#footer-contacts h1 {
     margin-bottom: 0.75rem;
 }
 
@@ -439,5 +516,5 @@ footer {
     background-color: #f9e8cc;
     font-size: 0.9rem;
     padding: 1.5rem;
-    font-weight: 100;
+    font-weight: 400;
 }
